Wed May  7 11:57:15 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: reset current_statement after all rows fetched
	* src/tds/iconv.c: fixed login, reindented

Tue May  6 13:14:14 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4 configure.in: start test for iconv names

Tue May  6 11:53:11 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c: some small fixes

Mon May  5 23:41:22 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* TODO corrections
	* include/tds.h src/tds/iconv.c src/tds/mem.c
	- initialize three TDSICONVINFO structures for the socket

Mon May  5  7:45:26 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c: some fixes 

Sun May  4 19:51:34 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/sybdb.h include/tds.h support per-column iconv conversion
	* TODO Itemize broken nonfeatures.  
	* src/apps/tsql.c don't segfault on blank input line. 
	* src/dblib/bcp.c src/dblib/dblib.c src/tds/iconv.c
	* src/tds/token.c src/tds/write.c 
	- convert delimited bcp data files with iconv while reading.
	- do not allocate two copies of data: "measure" and read instead.  
	- consolidate column writing in libtds::tds7_put_bcpcol()

Sat May  3 15:53:23 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/tdsiconv.h add tds_iconv_fread()

Sat May  3 20:45:42 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c:
	- applied patch #731907 from Arnar Birgisson (modified)
	* src/tds/token.c: prepare for conversion on Sybase/tds4.2

Sat May  3 15:16:49 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/read.c src/tds/token.c: fix previous commit

Sat May  3 14:52:19 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/read.c src/tds/token.c:
	- fixes and improve charset

Fri May  2 11:17:14 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/character_sets.h: update some multibyte data
	* src/tds/read.c: added some comments
