@@ -1,3 +1,8 @@
+Wed May  7 14:48:28 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* TODO src/odbc/unittests/moreandcount.c(added):
+	- test for SQLMoreResults and SQLRowCount in batch (fail)
+	* src/odbc/odbc.c: comments.
+
 Wed May  7 11:57:15 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* src/odbc/odbc.c: reset current_statement after all rows fetched
 	* src/tds/iconv.c: fixed login, reindented
